--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t ashrafsyed77/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run ashrafsyed77/react-test npm test -- --coverage
+  - docker run -e CI=true ashrafsyed77/react-test npm test
 
 after_success:
   - docker build -t ashrafsyed77/multi-client ./client
