--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - docker build -t ashrafsyed77/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true ashrafsyed77/react-test npm test
+  - docker run -e CI=true ashrafsyed77/docker-react npm run test
 
 after_success:
   - docker build -t ashrafsyed77/multi-client ./client
