--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ services:
   
 language: generic 
 
+before_install:
+  - docker build -t ashrafsyed77/react-test -f ./client/Dockerfile.dev ./client
+
 after_success:
   - docker build -t ashrafsyed77/multi-client ./client
   - docker build -t ashrafsyed77/multi-nginx ./nginx
