--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,17 @@ after_success:
   - docker push ashrafsyed77/multi-nginx
   - docker push ashrafsyed77/multi-server
   - docker push ashrafsyed77/multi-worker
+  
+ deploy:
+    provider: elasticbeanstalk
+    region: "ap-south-1"
+    app: "multi-docker"
+    env: "MultiDocker-env"
+    bucket_name: "elasticbeanstalk-ap-south-1-713175488066"
+    bucket_path: "docker-multi"
+    on:
+      branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
 
 
