--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,11 @@ after_success:
   
  deploy:
     provider: elasticbeanstalk
-    region: "ap-south-1"
-    app: "multi-docker"
-    env: "MultiDocker-env"
-    bucket_name: "elasticbeanstalk-ap-south-1-713175488066"
-    bucket_path: "docker-multi"
+    region: ap-south-1
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-ap-south-1-713175488066
+    bucket_path: docker-multi
     on:
       branch: master
     access_key_id: $AWS_ACCESS_KEY
